# scout_mini_project

devel/include/vicon_bridge/: tf_distortConfig.h
devel/lib/four_wheel_steering_controller/: four_wheel_steering
devel/lib/pkgconfig/: autokit.pc  bunker_description.pc  four_wheel_steering_controller.pc  four_wheel_steering_msgs.pc  hunter2_base.pc  hunter2_control.pc  hunter2_gazebo.pc  hunter_se_control.pc  hunter_se_description.pc  hunter_se_gazebo.pc  limo_gazebo_sim.pc  limo_s2_arm.pc  limo_s2_description.pc  limo_s2_gazebo_sim.pc  ranger_mini_control.pc  ranger_mini_v2.pc  ranger_mini_v2_gazebo.pc  ranger_mini_v3.pc  ranger_mini_v3_gazebo.pc  scout_base.pc  scout_bringup.pc  scout_control.pc  scout_description.pc  scout_gazebo_sim.pc  scout_mini_nav.pc  scout_mini_optimized.pc  scout_msgs.pc  steer_bot_hardware_gazebo.pc  steer_drive_controller.pc  tracer_description.pc  tracer_gazebo_sim.pc  tracer_mini.pc  ugv_sdk.pc  urdf_geometry_parser.pc  vicon_bridge.pc
devel/lib/scout_base/: scout_base_node
devel/lib/scout_gazebo_sim/: scout_skid_steer_controller
devel/lib/scout_mini_nav/: basic_waypoint_follower_node  simple_square_nav_node  waypoint_follower_node  waypoint_nav_node
devel/lib/steer_drive_controller/: steer_drive_controller_steerbot
devel/lib/tracer_gazebo_sim/: tracer_skid_steer_controller
devel/lib/vicon_bridge/: calibrate  testclient  tf_distort  vicon_bridge
devel/share/autokit/cmake/: autokitConfig.cmake
devel/share/bunker_description/cmake/: bunker_descriptionConfig.cmake
devel/share/four_wheel_steering_controller/cmake/: four_wheel_steering_controllerConfig.cmake
src/scout_mini_nav/: CMakeLists.txt  package.xml
src/scout_mini_nav/launch/: simple_nav.launch  waypoint_follower.launch  waypoint_nav.launch
src/scout_mini_nav/src/: basic_waypoint_follower.cpp  simple_square_nav.cpp  waypoint_follower.cpp  waypoint_nav.cpp  waypoint_visualizer.cpp
src/scout_mini_optimized/: CMakeLists.txt  package.xml  run_optimized_scout_mini.sh
src/scout_mini_optimized/config/: ekf_config.yaml
src/scout_mini_optimized/launch/: scout_mini_optimized.launch  scout_mini_optimized.launch.save  scout_mini_optimized.launch.save.1  scout_mini_optimized.launch.save.2  scout_mini_optimized.launch.save.3
src/scout_mini_optimized/worlds/: agricultural_field.world
(+41 files in other folders)
