<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_nav</name>
  <version>0.0.1</version>
  <description>Simple navigation for Scout Mini</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
</package>
