<?xml version="1.0"?>
<package format="2">
  <name>scout_mini_optimized</name>
  <version>0.0.1</version>
  <description>Optimized Scout Mini simulation package</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>scout_ros</depend>
  <depend>scout_description</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
</package>
